--- a/templates/moviegeek/index.html
+++ b/templates/moviegeek/index.html
@@ -245,6 +245,6 @@
         getTopContent();
         get_association_rule_recs({{user_id}})
         get_cf_recs({{user_id}})
-        // get_cb_recs({{user_id}})
+        get_cb_recs({{user_id}})
     </script>
 {% endblock content %}
